# assembly-contact-detection

./: .gitignore  CMakeLists.txt  README.md
dependencies/: eigen.cmake  gtest.cmake  osqp.cmake  physx.cmake  pybind11.cmake
dependencies/eigen/src/eigen-stamp/: download-eigen.cmake  eigen-urlinfo.txt  extract-eigen.cmake
dependencies/eigen/tmp/: eigen-cfgcmd.txt  eigen-mkdirs.cmake
dependencies/osqp/src/osqp-stamp/: osqp-download-.cmake  osqp-gitinfo.txt  osqp-update-info.txt
dependencies/osqp/tmp/: osqp-cfgcmd.txt  osqp-gitclone.cmake  osqp-gitupdate.cmake  osqp-mkdirs.cmake
dependencies/physx/src/PhysX-stamp/: PhysX-download--impl.cmake  PhysX-download-.cmake  PhysX-update-info.txt  PhysX-urlinfo.txt  download-PhysX.cmake  extract-PhysX.cmake
dependencies/physx/tmp/: PhysX-cfgcmd.txt  PhysX-mkdirs.cmake
dependencies/pybind11/src/pybind11-stamp/: pybind11-gitinfo.txt  pybind11-update-info.txt
dependencies/pybind11/tmp/: pybind11-cfgcmd.txt  pybind11-gitclone.cmake  pybind11-gitupdate.cmake  pybind11-mkdirs.cmake
doc/: Doxyfile
doc/html/: AARectangle_8h_source.html  AssemblyCD_8h_source.html  Contact_8h_source.html  ContactsManager_8h_source.html  ForceResolution_8h_source.html  Intersections_8h_source.html  Object_8h_source.html  OccupancyGrid_8h_source.html  PointSet_8h_source.html  Points_8h_source.html  Polygon_8h_source.html  Scene_8h_source.html  Triangle_8h_source.html  Utils_8h_source.html  annotated.html  classAARectangle-members.html  classAARectangle.html  classContact-members.html  classContact.html  classContactForce-members.html  classContactForce.html  classContactReportCallbackForVoxelgrid-members.html  classContactReportCallbackForVoxelgrid.html  classContactReportCallbackForVoxelgrid__coll__graph.map  classContactReportCallbackForVoxelgrid__inherit__graph.map  classContactReportCallbackForVoxelgrid__inherit__graph.md5  classContactsManager-members.html  classContactsManager.html  classConvex2DPolygon-members.html  classConvex2DPolygon.html  classForceSolver-members.html  classForceSolver.html  classGridCell-members.html  classGridCell.html  classObject-members.html  classObject.html  classObject__coll__graph.map  classObject__coll__graph.md5  classOccupancyGrid-members.html  classOccupancyGrid.html  (+96 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+7 more)
doc/latex/: AARectangle_8h_source.tex  AssemblyCD_8h_source.tex  Contact_8h_source.tex  ContactsManager_8h_source.tex  ForceResolution_8h_source.tex  Intersections_8h_source.tex  Object_8h_source.tex  OccupancyGrid_8h_source.tex  PointSet_8h_source.tex  Points_8h_source.tex  Polygon_8h_source.tex  Scene_8h_source.tex  Triangle_8h_source.tex  Utils_8h_source.tex  annotated.tex  classAARectangle.tex  classContact.tex  classContactForce.tex  classContactReportCallbackForVoxelgrid.tex  classContactReportCallbackForVoxelgrid__inherit__graph.md5  classContactsManager.tex  classConvex2DPolygon.tex  classForceSolver.tex  classGridCell.tex  classObject.tex  classObject__coll__graph.md5  classOccupancyGrid.tex  classPoint2D.tex  classPoint2D__inherit__graph.md5  classPoint3D.tex  classPoint3D__inherit__graph.md5  classPointSet2D.tex  classPointSet2D__coll__graph.md5  classPointSet2D__inherit__graph.md5  classPointSet3D.tex  classPointSet3D__inherit__graph.md5  classScene.tex  classTriangle.tex  files.tex  hierarchy.tex  (+8 more)
lib/: CMakeLists.txt
lib/src/: AARectangle.cpp  AARectangle.h  AssemblyCD.h  Contact.cpp  Contact.h  ContactsManager.cpp  ContactsManager.h  ForceResolution.cpp  ForceResolution.h  Intersections.cpp  Intersections.h  Object.cpp  Object.h  OccupancyGrid.cpp  OccupancyGrid.h  PointSet.cpp  PointSet.h  Points.cpp  Points.h  Polygon.cpp  Polygon.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  Utils.cpp  Utils.h
python_bindings/: CMakeLists.txt
python_bindings/src/: PythonBindings.cpp
test/: CMakeLists.txt  README_gtest.md  minimal_example.py  test.py
test/src/: gtest_contacts.cpp  gtest_cube.cpp  gtest_object_creation.cpp  test.cpp  test.h  test_contacts.cpp  test_cube.h  test_intersections.cpp  test_most_stable_points.cpp  test_object_creation.cpp  test_stress_object_creation.cpp
